package TSN_JAVA_OOP_MINI;

public class BrickTel extends ATelephone {

    @Override
    public void takePhoto() {
        System.err.println("Не поддерживаю, извините...");
    }

}
