package TSN_JAVA_OOP_MINI;

public class NormTel extends ATelephone {

    @Override
    public void takePhoto() {
        System.out.println("Фото успешно сделано! Помещено в галерею");
    }
    
}
