package TSN_JAVA_OOP_MINI;

public class SuperTel extends ATelephone {

    @Override
    public void takePhoto() {
        System.out.println("Фото 48 мегапикселей успешно сделано! Помещено в галерею");
    }
    
}
